[package]
name = "cans"
version = "0.4.0"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2021"
description = "An Elegant Rust-based Literal Template Engine"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dr-montasir/cans"
repository = "https://github.com/dr-montasir/cans"
readme = "README.md"
keywords = ["template", "html", "json", "text", "mime"]
categories = ["template-engine", "parser-implementations", "web-programming"]

[dependencies]

[lib]
name = "cans"
path = "src/lib.rs"