[package]
name = "cans"
version = "0.8.0"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2021"
description = "An elegant and lightweight Rust-based literal template engine"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dr-montasir/cans"
repository = "https://github.com/dr-montasir/cans"
readme = "README.md"
keywords = ["template", "html", "text", "mime", "world"]
categories = ["template-engine", "parser-implementations", "web-programming"]

[dependencies]

[lib]
name = "cans"
path = "src/lib.rs"