[package]
name = "cans"
version = "1.1.0"
authors = ["Montasir Mirghani <contact@montasir.me>"]
edition = "2024"
description = "An elegant and lightweight Rust-based literal template engine for managing web content, enhanced with a world module for streamlined regional and city information, as well as robust MIME type management."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/dr-montasir/cans"
repository = "https://github.com/dr-montasir/cans"
readme = "README.md"
keywords = ["template", "html", "text", "mime", "world"]
categories = ["template-engine", "parser-implementations", "web-programming"]

[dependencies]

[lib]
name = "cans"
path = "src/lib.rs"